app-manifests/app-manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lesson-10
  labels:
    istio-injection: enabled

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson-10-v1-dep
  namespace: lesson-10
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesson-10
      version: v1
  template:
    metadata:
      labels:
        app: lesson-10
        version: v1
    spec:
      containers:
      - name: lesson-10
        image: binhex386/lesson-10:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson-10-v2-dep
  namespace: lesson-10
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesson-10
      version: v2
  template:
    metadata:
      labels:
        app: lesson-10
        version: v2
    spec:
      containers:
      - name: lesson-10
        image: binhex386/lesson-10:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: lesson-10-svc
  namespace: lesson-10
spec:
  selector:
    app: lesson-10
  ports:
  - port: 9000
    targetPort: 8000
    protocol: TCP
  type: NodePort
