app-manifests/istio-ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lesson-10-gw
  namespace: lesson-10
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lesson-10-destrule
  namespace: lesson-10
spec:
  host: lesson-10-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lesson-10-vsvc
  namespace: lesson-10
spec:
  hosts:
    - "*"
  gateways:
    - lesson-10-gw
  http:
    - route:
        - destination:
            host: lesson-10-svc
            subset: v1
            port:
              number: 9000
          weight: 50
        - destination:
            host: lesson-10-svc
            subset: v2
            port:
              number: 9000
          weight: 50
